--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -19,8 +19,10 @@ clean-targets:
 
 require-dbt-version: [">=1.0.0", "<2.0.0"]
 
+
 models:
   jaffle_shop:
       materialized: table
+      database: default
       staging:
         materialized: view
